# Noita-AI-Mod

./: .gitignore  CMakeLists.txt  README.md  build_cuda_trainer.bat  build_incremental.bat  build_main.bat  build_sequence_trainer.bat  build_trainer.bat  lua_api_documentation.html  reduce_zero_actions.py  run_sequence_trainer.bat  run_trainer.bat
.vercel/: project.json
build-tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  SafetyCheckerTests.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  safety_checker_test.vcxproj  safety_checker_test.vcxproj.filters
build-tests/safety_checker_test.dir/Debug/: safety_checker_test.exe.recipe  safety_checker_test.ilk
build-tests/safety_checker_test.dir/Debug/safety_c.6EAF10BF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  safety_checker_test.lastbuildstate
build-tests/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-tests/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
build-tests/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build-tests/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: main.cpp
src/ai/controller/: AIController.cpp  AIController.h  DataCollector.cpp  DataCollector.h
src/ai/pathfinding/: RayCasting.cpp  RayCasting.h
src/ai/trainer/: train_sl.cpp
src/ai/trainer/CUDA_SLTrainer/: CMakeLists.txt  CUDASequenceTrainer.cpp  CUDASequenceTrainer.h  train_cuda_sequence.cpp
src/ai/trainer/SLTrainer/: CMakeLists.txt  SLTrainer.cpp  SLTrainer.h  SequenceTrainer.cpp  SequenceTrainer.h  TrainingManager.cpp  TrainingManager.h  train_manager.cpp  train_sequence.cpp  train_sl.cpp
src/core/: Constants.h  Game.cpp  Game.h  Map.cpp  Map.h  README.md  Renderer.cpp  Renderer.h  SafetyChecker.cpp  SafetyChecker.h  Time.cpp  Time.h  UI.cpp  UI.h  Window.cpp  Window.h
src/entity/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Item.h  Player.cpp  Player.h
src/physics/: Collision.cpp  Collision.h  PointCloudMapper.cpp  PointCloudMapper.h
src/world/: Parser.cpp  Parser.h
tests/: CMakeLists.txt  SafetyCheckerTest.cpp
tests/testDev/: CMakeLists.txt  Circle.cpp  Circle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  sfml_test.cpp
